--- a/post-1.html
+++ b/post-1.html
@@ -203,7 +203,7 @@
         <div>
           <h3 class="text-lg font-semibold mb-4">Stay Updated</h3>
           <form class="flex">
-            <input type="email" placeholder="Your email" class="px-4 py-2 rounded-l-lg w-full focus:outline-none">
+            <input type="email" placeholder="Your email" class="px-4 py-2 rounded-l-lg w-full focus:outline-hidden">
             <button class="bg-purple-700 px-4 py-2 text-slate-50 rounded-r-lg hover:bg-blue-700">
               Subscribe
             </button>
